change method for origin patterns